--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,15 @@
-title: Ethan Zaruba-Walker # your name (or website title) here
+title: Ethan<br>Zaruba-Walker # your name (or website title) here
 logo: "/images/logo.jpg?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
-  First description 
+  Hi, my name's Ethan and I'm completing my BS in Information Science at CU Boulder. I've spent 2.5 years at IBM building various data-centric skills like SQL, Python and visual sotrytelling. I'm actively looking for paid data analytics opportunities.
   <br><br>
-  Second description 
+  Take a look around and reach out if you have any data needs!  
   <br><br>
-  <a href="https://www.linkedin.com/in/example/">View My LinkedIn Profile</a> 
+  <a href="www.linkedin.com/in/ethan-zaruba-walker/">LinkedIn Profile</a>
+  <br>
+  <a href="https://medium.com/@rocketwalker">Data Blogs on Medium</a>
+  <br>
+  <a href="https://github.com/EZ-Walk">Github</a> 
   
 theme: jekyll-theme-minimal
 google_analytics: UA-000000-0 # your Google Analytics tracking ID here
