--- a/_config.yml
+++ b/_config.yml
@@ -3,6 +3,8 @@ logo: "/images/logo.jpg?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
   Take a look around and reach out if you have any data needs!  
   <br><br>
+  <a href="https://github.com/EZ-Walk/ez-walk.github.io/blob/master/pdf/Analyst_Resume.pdf">Resume</a>
+  <br>
   <a href="www.linkedin.com/in/ethan-zaruba-walker/">LinkedIn Profile</a>
   <br>
   <a href="https://medium.com/@rocketwalker">Data Blogs on Medium</a>
